setup layout and pages home blog

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,15 @@
 ---
+
 ---
 
-<header class="bg-slate-500">
- <div class="h-12 flex justify-between items-center container">
-  <h1>takayums</h1>
-  <nav>
-    <ul class="flex space-x-4">
-      <li><a href="about">About</a></li>
-      <li><a href="blog">Blog</a></li>
-    </ul>
-  </nav>
- </div>
+<header class="sticky z-40 shadow-sm top-0 bg-white">
+  <div class="py-6 lg:w-max-7xl flex justify-between items-center mx-auto container">
+    <h1 class="text-2xl font-semibold"><a href="/">takayums</a></h1>
+    <nav>
+      <ul class="flex space-x-4 text-base">
+        <li><a href="/about">About</a></li>
+        <li><a href="/blog">Blog</a></li>
+      </ul>
+    </nav>
+  </div>
 </header>
