--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
+
 ---
 
-<footer class="py-2 flex items-center justify-center">
+<footer class="py-2 text-base flex items-center justify-center">
   <p>© 2023 takayums. All rights reserved.</p>
 </footer>
-
