--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ const { title } = Astro.props;
   </head>
   <body class="min-h-screen flex flex-col">
     <Header />
-    <main class="flex-grow flex flex-col container max-w-4xl mx-auto">
+    <main class="flex-grow flex flex-col container max-w-4xl mx-auto my-8">
       <slot />
     </main>
     <Footer />
