--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -1,9 +1,12 @@
 ---
-import { convertDate } from "../utils/date.js";
+import { convertDate } from "../utils/date.astro";
 const { url, frontmatter } = Astro.props;
 ---
 
-<div href={url} class="p-4 rounded-xl shadow-md">
+<div
+  href={url}
+  class="p-4 rounded-xl shadow-md hover:shadow-lg hover:scale-105 ease-in-out duration-200"
+>
   <img
     src="https://unsplash.com/photos/FCHlYvR5gJI/download?ixid=M3wxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNjk2NzI0MDk3fA&force=true&w=640"
     alt="blog card"
