delete url on div tag

--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -3,15 +3,11 @@ import { convertDate } from "../utils/date.astro";
 const { url, frontmatter } = Astro.props;
 ---
 
-<div
-  href={url}
-  class="p-4 rounded-xl shadow-md hover:shadow-lg hover:scale-105 ease-in-out duration-200"
->
+<div class="p-4 rounded-xl shadow-md hover:shadow-lg hover:scale-105 ease-in-out duration-200">
   <img
     src="https://unsplash.com/photos/FCHlYvR5gJI/download?ixid=M3wxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNjk2NzI0MDk3fA&force=true&w=640"
     alt="blog card"
     class="rounded-xl object-contain mb-4"
-    width=""
     height="240"
   />
   <!-- Body Card-->
