delete tags mapping

--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -11,7 +11,7 @@ const { url, frontmatter } = Astro.props;
     height="240"
   />
   <!-- Body Card-->
-  <div class="flex gap-2">
+  <!-- <div class="flex gap-2">
     {
       frontmatter.tags.map(tag => (
         <span class="p-1.5 bg-[#4B6BFB]/5 text-[#4B6BFB] rounded-md font-medium text-sm">
@@ -20,6 +20,7 @@ const { url, frontmatter } = Astro.props;
       ))
     }
   </div>
+  -->
   <h2>
     <a
       href={url}
