change path public image

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="About Me">
   <section class="flex items-center justify-center gap-8 my-auto">
-    <img src="/public/takayums.png" class="max-h-[400px] max-w-[400px]" alt="takayums" />
+    <img src="/takayums.png" class="max-h-[400px] max-w-[400px]" alt="takayums" />
     <div>
       <h1 class="font-bold text-4xl text-center mb-4">
         Hai 👋, Saya <span class="text-blue-500">Muhammad Asraf Takayuma</span>
